--- a/exercises/practice/affine-cipher/.meta/config.json
+++ b/exercises/practice/affine-cipher/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Create an implementation of the Affine cipher, an ancient encryption algorithm from the Middle East.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "AffineCipher.php"
+    ],
+    "test": [
+      "AffineCipherTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
