--- a/exercises/practice/bowling/.meta/config.json
+++ b/exercises/practice/bowling/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Score a bowling game",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Bowling.php"
+    ],
+    "test": [
+      "BowlingTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
