--- a/exercises/practice/connect/.meta/config.json
+++ b/exercises/practice/connect/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Compute the result for a game of Hex / Polygon",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Connect.php"
+    ],
+    "test": [
+      "ConnectTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
