--- a/exercises/practice/diamond/.meta/config.json
+++ b/exercises/practice/diamond/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a letter, print a diamond starting with 'A' with the supplied letter at the widest point.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Diamond.php"
+    ],
+    "test": [
+      "DiamondTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
