--- a/exercises/practice/grains/.meta/config.json
+++ b/exercises/practice/grains/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Calculate the number of grains of wheat on a chessboard given that the number on each square doubles.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Grains.php"
+    ],
+    "test": [
+      "GrainsTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
