--- a/exercises/practice/nucleotide-count/.meta/config.json
+++ b/exercises/practice/nucleotide-count/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a DNA string, compute how many times each nucleotide occurs in the string.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "NucleotideCount.php"
+    ],
+    "test": [
+      "NucleotideCountTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
