--- a/exercises/practice/pig-latin/.meta/config.json
+++ b/exercises/practice/pig-latin/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Implement a program that translates from English to Pig Latin",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "PigLatin.php"
+    ],
+    "test": [
+      "PigLatinTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
