--- a/exercises/practice/robot-name/.meta/config.json
+++ b/exercises/practice/robot-name/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Manage robot factory settings.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "RobotName.php"
+    ],
+    "test": [
+      "RobotNameTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
