--- a/exercises/practice/sum-of-multiples/.meta/config.json
+++ b/exercises/practice/sum-of-multiples/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a number, find the sum of all the multiples of particular numbers up to but not including that number.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "SumOfMultiples.php"
+    ],
+    "test": [
+      "SumOfMultiplesTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
