--- a/exercises/practice/two-fer/.meta/config.json
+++ b/exercises/practice/two-fer/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Create a sentence of the form \"One for X, one for me.\"",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "TwoFer.php"
+    ],
+    "test": [
+      "TwoFerTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
