--- a/exercises/practice/all-your-base/.meta/config.json
+++ b/exercises/practice/all-your-base/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Convert a number, represented as a sequence of digits in one base, to any other base.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "AllYourBase.php"
+    ],
+    "test": [
+      "AllYourBaseTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
