--- a/exercises/practice/binary/.meta/config.json
+++ b/exercises/practice/binary/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Convert a binary number, represented as a string (e.g. '101010'), to its decimal equivalent using first principles",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Binary.php"
+    ],
+    "test": [
+      "BinaryTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
