--- a/exercises/practice/bob/.meta/config.json
+++ b/exercises/practice/bob/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Bob is a lackadaisical teenager. In conversation, his responses are very limited.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Bob.php"
+    ],
+    "test": [
+      "BobTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
