--- a/exercises/practice/flatten-array/.meta/config.json
+++ b/exercises/practice/flatten-array/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Take a nested list and return a single list with all values except nil/null",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "FlattenArray.php"
+    ],
+    "test": [
+      "FlattenArrayTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
