--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given a 3 x 4 grid of pipes, underscores, and spaces, determine which number is represented, or whether it is garbled.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "OcrNumbers.php"
+    ],
+    "test": [
+      "OcrNumbersTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
