--- a/exercises/practice/perfect-numbers/.meta/config.json
+++ b/exercises/practice/perfect-numbers/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Determine if a number is perfect, abundant, or deficient based on Nicomachus' (60 - 120 CE) classification scheme for positive integers.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "PerfectNumbers.php"
+    ],
+    "test": [
+      "PerfectNumbersTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
