--- a/exercises/practice/queen-attack/.meta/config.json
+++ b/exercises/practice/queen-attack/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Given the position of two queens on a chess board, indicate whether or not they are positioned so that they can attack each other.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "QueenAttack.php"
+    ],
+    "test": [
+      "QueenAttackTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
