--- a/exercises/practice/raindrops/.meta/config.json
+++ b/exercises/practice/raindrops/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Convert a number to a string, the content of which depends on the number's factors.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Raindrops.php"
+    ],
+    "test": [
+      "RaindropsTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
