--- a/exercises/practice/triangle/.meta/config.json
+++ b/exercises/practice/triangle/.meta/config.json
@@ -2,8 +2,12 @@
   "blurb": "Determine if a triangle is equilateral, isosceles, or scalene.",
   "authors": [],
   "files": {
-    "solution": [],
-    "test": [],
+    "solution": [
+      "Triangle.php"
+    ],
+    "test": [
+      "TriangleTest.php"
+    ],
     "example": [
       ".meta/example.php"
     ]
