--- a/config.json
+++ b/config.json
@@ -12,7 +12,9 @@
   "version": 3,
   "online_editor": {
     "indent_style": "space",
-    "indent_size": 4
+    "indent_size": 4,
+    "ace_editor_language": "php",
+    "highlightjs_language": "php"
   },
   "test_runner": {
     "average_run_time": 2.0
