--- a/.appends/.github/labels.yml
+++ b/.appends/.github/labels.yml
@@ -1,3 +1,8 @@
+# ----------------------------------------------------------------------------------------- #
+# These are the repository-specific labels that augment the Exercise-wide labels defined in #
+# https://github.com/exercism/org-wide-files/blob/main/global-files/.github/labels.yml.     #
+# ----------------------------------------------------------------------------------------- #
+
 - name: "bug"
   description: ""
   color: "fc2929"
@@ -30,23 +35,10 @@
   description: ""
   color: "cc317c"
 
-- name: "reputation/contributed_code/major"
-  description: ""
-  color: "FE12E8"
-
 - name: "reputation/contributed_code/medium"
   description: ""
   color: "19036C"
 
-- name: "reputation/contributed_code/minor"
-  description: ""
-  color: "8F3608"
-
-- name: "v3-migration 🤖"
-  description: "Preparing for Exercism v3"
-  color: "E99695"
-
 - name: "wontfix"
   description: ""
   color: "ffffff"
-
