--- a/exercises/practice/allergies/.meta/config.json
+++ b/exercises/practice/allergies/.meta/config.json
@@ -1,16 +1,18 @@
 {
   "blurb": "Given a person's allergy score, determine whether or not they're allergic to a given item, and their full list of allergies.",
-  "authors": [],
+  "authors": ["mikeSimonson"],
+  "contributors": [
+    "arueckauer",
+    "DerTee",
+    "G-Rath",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "Allergies.php"
-    ],
-    "test": [
-      "AllergiesTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Allergies.php"],
+    "test": ["AllergiesTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Jumpstart Lab Warm-up",
   "source_url": "http://jumpstartlab.com"
