--- a/exercises/practice/anagram/.meta/config.json
+++ b/exercises/practice/anagram/.meta/config.json
@@ -1,16 +1,11 @@
 {
   "blurb": "Given a word and a list of possible anagrams, select the correct sublist.",
-  "authors": [],
+  "authors": ["ecrmnn"],
+  "contributors": ["arueckauer", "kunicmarko20", "kytrinyx", "petemcfarlane"],
   "files": {
-    "solution": [
-      "Anagram.php"
-    ],
-    "test": [
-      "AnagramTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Anagram.php"],
+    "test": ["AnagramTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Inspired by the Extreme Startup game",
   "source_url": "https://github.com/rchatley/extreme_startup"
