--- a/exercises/practice/book-store/.meta/config.json
+++ b/exercises/practice/book-store/.meta/config.json
@@ -1,16 +1,11 @@
 {
   "blurb": "To try and encourage more sales of different books from a popular 5 book series, a bookshop has decided to offer discounts of multiple-book purchases.",
-  "authors": [],
+  "authors": ["Hrumpa"],
+  "contributors": ["arueckauer", "kytrinyx", "petemcfarlane"],
   "files": {
-    "solution": [
-      "BookStore.php"
-    ],
-    "test": [
-      "BookStoreTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["BookStore.php"],
+    "test": ["BookStoreTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Inspired by the harry potter kata from Cyber-Dojo.",
   "source_url": "http://cyber-dojo.org"
