--- a/exercises/practice/diamond/.meta/config.json
+++ b/exercises/practice/diamond/.meta/config.json
@@ -1,16 +1,11 @@
 {
   "blurb": "Given a letter, print a diamond starting with 'A' with the supplied letter at the widest point.",
-  "authors": [],
+  "authors": ["camilopayan"],
+  "contributors": ["arueckauer", "yisraeldov"],
   "files": {
-    "solution": [
-      "Diamond.php"
-    ],
-    "test": [
-      "DiamondTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Diamond.php"],
+    "test": ["DiamondTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Seb Rose",
   "source_url": "http://claysnow.co.uk/recycling-tests-in-tdd/"
