--- a/exercises/practice/difference-of-squares/.meta/config.json
+++ b/exercises/practice/difference-of-squares/.meta/config.json
@@ -1,16 +1,19 @@
 {
   "blurb": "Find the difference between the square of the sum and the sum of the squares of the first N natural numbers.",
   "authors": [],
+  "contributors": [
+    "arueckauer",
+    "dkinzer",
+    "kunicmarko20",
+    "kytrinyx",
+    "lafent",
+    "petemcfarlane",
+    "Scientifica96"
+  ],
   "files": {
-    "solution": [
-      "DifferenceOfSquares.php"
-    ],
-    "test": [
-      "DifferenceOfSquaresTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["DifferenceOfSquares.php"],
+    "test": ["DifferenceOfSquaresTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Problem 6 at Project Euler",
   "source_url": "http://projecteuler.net/problem=6"
