--- a/exercises/practice/gigasecond/.meta/config.json
+++ b/exercises/practice/gigasecond/.meta/config.json
@@ -1,16 +1,24 @@
 {
   "blurb": "Given a moment, determine the moment that would be after a gigasecond has passed.",
   "authors": [],
+  "contributors": [
+    "arueckauer",
+    "dkinzer",
+    "Dog",
+    "kunicmarko20",
+    "kytrinyx",
+    "lafent",
+    "MatheusNaldi",
+    "petemcfarlane",
+    "peteraba",
+    "TFarla",
+    "tstirrat15",
+    "zembrowski"
+  ],
   "files": {
-    "solution": [
-      "Gigasecond.php"
-    ],
-    "test": [
-      "GigasecondTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Gigasecond.php"],
+    "test": ["GigasecondTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Chapter 9 in Chris Pine's online Learn to Program tutorial.",
   "source_url": "http://pine.fm/LearnToProgram/?Chapter=09"
