--- a/exercises/practice/leap/.meta/config.json
+++ b/exercises/practice/leap/.meta/config.json
@@ -1,16 +1,18 @@
 {
   "blurb": "Given a year, report if it is a leap year.",
   "authors": [],
+  "contributors": [
+    "arueckauer",
+    "dkinzer",
+    "kunicmarko20",
+    "kytrinyx",
+    "lafent",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "Leap.php"
-    ],
-    "test": [
-      "LeapTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Leap.php"],
+    "test": ["LeapTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "JavaRanch Cattle Drive, exercise 3",
   "source_url": "http://www.javaranch.com/leap.jsp"
