--- a/exercises/practice/nth-prime/.meta/config.json
+++ b/exercises/practice/nth-prime/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Given a number n, determine what the nth prime is.",
-  "authors": [],
+  "authors": ["arthurchipdean"],
+  "contributors": [
+    "arueckauer",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane",
+    "yisraeldov"
+  ],
   "files": {
-    "solution": [
-      "NthPrime.php"
-    ],
-    "test": [
-      "NthPrimeTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["NthPrime.php"],
+    "test": ["NthPrimeTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "A variation on Problem 7 at Project Euler",
   "source_url": "http://projecteuler.net/problem=7"
