--- a/exercises/practice/phone-number/.meta/config.json
+++ b/exercises/practice/phone-number/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Clean up user-entered phone numbers so that they can be sent SMS messages.",
-  "authors": [],
+  "authors": ["nhoag"],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "PhoneNumber.php"
-    ],
-    "test": [
-      "PhoneNumberTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["PhoneNumber.php"],
+    "test": ["PhoneNumberTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Event Manager by JumpstartLab",
   "source_url": "http://tutorials.jumpstartlab.com/projects/eventmanager.html"
