--- a/exercises/practice/prime-factors/.meta/config.json
+++ b/exercises/practice/prime-factors/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Compute the prime factors of a given natural number.",
-  "authors": [],
+  "authors": ["arthurchipdean"],
+  "contributors": [
+    "arueckauer",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane",
+    "yisraeldov"
+  ],
   "files": {
-    "solution": [
-      "PrimeFactors.php"
-    ],
-    "test": [
-      "PrimeFactorsTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["PrimeFactors.php"],
+    "test": ["PrimeFactorsTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Prime Factors Kata by Uncle Bob",
   "source_url": "http://butunclebob.com/ArticleS.UncleBob.ThePrimeFactorsKata"
