--- a/exercises/practice/queen-attack/.meta/config.json
+++ b/exercises/practice/queen-attack/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Given the position of two queens on a chess board, indicate whether or not they are positioned so that they can attack each other.",
-  "authors": [],
+  "authors": ["MichaelBunker"],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "QueenAttack.php"
-    ],
-    "test": [
-      "QueenAttackTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["QueenAttack.php"],
+    "test": ["QueenAttackTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "J Dalbey's Programming Practice problems",
   "source_url": "http://users.csc.calpoly.edu/~jdalbey/103/Projects/ProgrammingPractice.html"
