--- a/exercises/practice/robot-simulator/.meta/config.json
+++ b/exercises/practice/robot-simulator/.meta/config.json
@@ -1,16 +1,11 @@
 {
   "blurb": "Write a robot simulator.",
-  "authors": [],
+  "authors": ["Hrumpa"],
+  "contributors": ["arueckauer", "G-Rath", "kytrinyx", "petemcfarlane"],
   "files": {
-    "solution": [
-      "RobotSimulator.php"
-    ],
-    "test": [
-      "RobotSimulatorTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["RobotSimulator.php"],
+    "test": ["RobotSimulatorTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Inspired by an interview question at a famous company.",
   "source_url": ""
