--- a/exercises/practice/space-age/.meta/config.json
+++ b/exercises/practice/space-age/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.",
-  "authors": [],
+  "authors": ["camilopayan"],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "SpaceAge.php"
-    ],
-    "test": [
-      "SpaceAgeTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["SpaceAge.php"],
+    "test": ["SpaceAgeTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Partially inspired by Chapter 1 in Chris Pine's online Learn to Program tutorial.",
   "source_url": "http://pine.fm/LearnToProgram/?Chapter=01"
