--- a/exercises/practice/triangle/.meta/config.json
+++ b/exercises/practice/triangle/.meta/config.json
@@ -1,16 +1,17 @@
 {
   "blurb": "Determine if a triangle is equilateral, isosceles, or scalene.",
-  "authors": [],
+  "authors": ["camilopayan"],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "Triangle.php"
-    ],
-    "test": [
-      "TriangleTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Triangle.php"],
+    "test": ["TriangleTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Ruby Koans triangle project, parts 1 & 2",
   "source_url": "http://rubykoans.com"
