--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -31,12 +31,16 @@ jobs:
         with:
           version: ${{ matrix.php-version }}
           extensions: gmp
+          tools: composer
 
       - name: Install dependencies
         shell: bash
         run: |
           curl -Lo bin/phpcs.phar https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
           chmod +x bin/phpcs.phar
+
+      - name: Install composer packages
+        run: composer install
 
       - name: Lint exercises
         shell: bash
