--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -29,7 +29,7 @@ jobs:
 
       - uses: shivammathur/setup-php@46fc8a2fd7cba50512858026dc8f0947c8a7a0e8
         with:
-          version: ${{ matrix.php-version }}
+          php-version: ${{ matrix.php-version }}
           extensions: gmp
           tools: composer
 
@@ -44,7 +44,4 @@ jobs:
 
       - name: Lint exercises
         shell: bash
-        env:
-          PHPCS_BIN: 'bin/phpcs.phar'
-          PHPCS_RULES: 'phpcs-php.xml'
-        run: bin/lint.sh
+        run: composer lint:check
