--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
-    "name": "exercism/php",
-    "require-dev": {
-        "slevomat/coding-standard": "^7.0"
-    }
+  "name": "exercism/php",
+  "autoload": {
+    "Exercism\\": "src",
+    "Exercism\\Exercises\\": "exercises"
+  },
+  "require-dev": {
+    "slevomat/coding-standard": "^7.0",
+    "squizlabs/php_codesniffer": "^3.6"
+  },
+  "scripts": {
+    "lint:check": "./vendor/bin/phpcs --standard=phpcs-php.xml ./exercises",
+    "lint:fix": "./vendor/bin/phpcbf --standard=phpcs-php.xml ./exercises"
+  }
 }
