--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "Exercism\\Exercises\\": "exercises"
   },
   "require-dev": {
+    "php": "^7.4|^8.0",
     "slevomat/coding-standard": "^7.0",
     "squizlabs/php_codesniffer": "^3.6"
   },
