--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "squizlabs/php_codesniffer": "^3.6"
   },
   "scripts": {
-    "lint:check": "./vendor/bin/phpcs --standard=phpcs-php.xml ./exercises",
+    "lint:check": "./vendor/bin/phpcs --ignore=*/hello-world/* --standard=phpcs-php.xml ./exercises",
     "lint:fix": "./vendor/bin/phpcbf --standard=phpcs-php.xml ./exercises"
   }
 }
